change index.htnl and close.svg

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <img class="profile__avatar" src="assets/images/sidebar-avatar.jpg" alt="Avatar">
                     <div class="profile__header">
                         <div class="profile__name">Антон Старосотников</div>
-                        <div class="profile_prof">Блог начинающего Frontend разработчика</div>
+                        <div class="profile_prof">Блог Frontend разработчика</div>
                     </div>
                     <ul class="social">
                         <li class="social__item">
