--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <div class="modal__content">
             
             <button class="modal__close" type="button">
-                <img src="/assets/images/close.svg" alt="Закрыть">
+                <img src="assets/images/close.svg" alt="Закрыть">
             </button>
             
             <ul class="social social--share">
